# NNS_Cpp_OMP

./: README.md
NNS_Demo_3D_Gutrmann/: Build_README.txt  CMakeLists.txt
NNS_Demo_3D_Gutrmann/header/: globals.hpp  particle.hpp  sort.hpp
NNS_Demo_3D_Gutrmann/source/: globals.cpp  main.cpp  particle.cpp  sort.cpp
